# maya-simple-render-override

./: CMakeLists.txt  README.md  main.cpp
